# repo-manager

./: .eslintrc.cjs  .gitignore  DEVELOPMENT_PROGRESS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src-tauri/src/adapters/: filesystem_adapter.rs  git_adapter.rs  ignore_adapter.rs  mod.rs  tokei_adapter.rs
src-tauri/src/cache/: cache_service.rs  mod.rs  models.rs
src-tauri/src/commands/: mod.rs  repository_commands.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs  repository_service.rs
src/components/: BatchOperations.tsx  RepositoryDetails.tsx  RepositoryGrid.tsx  Sidebar.tsx  StatsOverview.tsx
src/types/: index.ts
src/utils/: formatters.ts
